# pointrain

./: Cargo.toml  README.md
.github/workflows/: test.yaml
crates/pointrain/: Cargo.toml
crates/pointrain-core/: Cargo.toml
crates/pointrain-core/src/: lib.rs  pc.rs  point.rs  traits.rs  types.rs
crates/pointrain-core/src/pc/: base.rs  intensity.rs  intensity_normal.rs  normal.rs  rgb.rs  rgb_normal.rs  xyz.rs  xyz_normal.rs  xyz_rgb.rs  xyz_rgb_normal.rs  xyzi.rs  xyzi_normal.rs
crates/pointrain-core/src/point/: intensity.rs  intensity_normal.rs  normal.rs  rgb.rs  rgb_normal.rs  xyz.rs
crates/pointrain-core/tests/: test_transform.rs
crates/pointrain-filter/: Cargo.toml
crates/pointrain-filter/src/: lib.rs  utility.rs  voxel_grid.rs
crates/pointrain-filter/tests/: test_voxel_grid.rs
crates/pointrain-io/: Cargo.toml
crates/pointrain-io/src/: error.rs  field.rs  lib.rs  pcd.rs  ply.rs  xyz.rs
crates/pointrain-io/src/pcd/: field.rs  point.rs  read.rs
crates/pointrain-io/src/ply/: point.rs  read.rs
crates/pointrain-io/tests/: test_pcd.rs  test_ply.rs  test_xyz.rs
crates/pointrain-io/tests/data/pcd/: test_ascii.pcd  test_binary.pcd
crates/pointrain-io/tests/data/xyz/: invalid_size.xyz  test.xyz
crates/pointrain/src/: lib.rs
examples/pc-read/: Cargo.toml
examples/pc-read/src/: main.rs
examples/pcd_read/: Cargo.toml
examples/pcd_read/src/: main.rs
