[package]
name = "pointrain-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Core library for Pointrain"

[dependencies]
colorgrad = { version = "0.6", optional = true }
nalgebra.workspace = true
rerun = { workspace = true, optional = true }

[features]
rerun = ["dep:rerun", "colorgrad"]

[dev-dependencies]
approx.workspace = true
