[package]
name = "pointrain-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Core library for Pointrain"

[dependencies]
colorgrad = { version = "0.6.2", optional = true }
nalgebra.workspace = true
re_types = { workspace = true, optional = true }

[features]
rerun = ["re_types", "colorgrad"]

[dev-dependencies]
approx.workspace = true
