[package]
name = "pointrain-io"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "IO library for Pointrain"

[dependencies]
bytes = "1.5.0"
nalgebra.workspace = true
pointrain-core.workspace = true
thiserror.workspace = true
