[package]
name = "pointrain"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Poitcloud processing library"

[dependencies]
pointrain-core.workspace = true
pointrain-filter = { workspace = true, optional = true }
pointrain-io = { workspace = true, optional = true }

[features]
default = ["filter"]
filter = ["pointrain-filter"]
io = ["pointrain-io"]
rerun = ["pointrain-core/rerun"]
